<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="clear_all">AC</string>
    <string name="decimal">.</string>
    <string name="delete">⌫</string>
    <string name="percent">%</string>
    <string name="plus_minus">±</string>
    <string name="scientific_mode">Sci</string>
    <string name="settings">⚙</string>
    <string name="history">Hist</string>
    <string name="unit_converter">Units</string>
    <string name="mode_toggle">Mode</string>
</resources>
